Bug 306472 - Krusader fails to build when using clang as compiler
Summary: Krusader fails to build when using clang as compiler
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta1 "Migration"
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-09 05:14 UTC by Jekyll Wu
Modified: 2018-05-06 00:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.0-beta2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2012-09-09 05:14:33 UTC
Clang complains : 

/mnt/personal/code/kde/krusader/krusader/Dialogs/checksumdlg.cpp:53:91: error: default arguments can only be specified for
      parameters in a function declaration
                               const QString checksumFile, bool recursive, const QString& type = QString());
                                                                                          ^      ~~~~~~~~~

So here is the problematic part:

typedef void PREPARE_PROC_FUNC(KProcess& proc, CS_Tool *self, const QStringList& files,
                               const QString checksumFile, bool recursive, const QString& type = QString());


Reproducible: Always

Steps to Reproduce:
1. install clang 3.1
2. use clang to build krusader
Comment 1 Jekyll Wu 2012-10-12 18:20:26 UTC
Git commit df0ff9a12f7fe601d5406776dfd3578ad0e5bc79 by Jekyll Wu.
Committed on 12/10/2012 at 19:27.
Pushed by jekyllwu into branch 'master'.

fix bullding error when using clang as the compiler
REVIEW: 106813

M  +1    -1    krusader/Dialogs/checksumdlg.cpp

http://commits.kde.org/krusader/df0ff9a12f7fe601d5406776dfd3578ad0e5bc79