fix bullding error when using clang as the compiler

BUG: 306472
REVIEW: 106813